--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vx/axis": "^0.0.170",
+    "@vx/gradient": "^0.0.165",
+    "@vx/shape": "^0.0.170",
+    "@vx/text": "^0.0.165",
+    "d3-array": "^1.2.1",
+    "d3-scale": "^2.1.0",
     "intersection-observer": "^0.5.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
