--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "reddit-dataviz-battle-2018-07",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "prettier --write '{,!(node_modules)/}**/*.{js,jsx}'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
     "@vx/axis": "^0.0.170",
     "@vx/gradient": "^0.0.165",
@@ -17,14 +26,8 @@
     "scrollama": "^1.4.3",
     "styled-components": "^3.3.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "lint": "prettier --write '{,!(node_modules)/}**/*.{js,jsx}'"
-  },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "prettier": "^1.13.7"
   }
 }
